# MCP-LangGraph-Integration

./: README.md
MCP_LangGraph/: pyproject.toml
MCP_LangGraph/scout/: client.py  graph.py
MCP_LangGraph/scout/my_mcp/: config.py  mcp_config.json
MCP_LangGraph/scout/my_mcp/local_servers/: dataflow.py
